[gd_scene load_steps=8 format=3 uid="uid://b22igqkj8p6xl"]

[ext_resource type="Script" path="res://Human_AA.gd" id="1_8klur"]
[ext_resource type="AudioStream" uid="uid://o6wsmyrt4plt" path="res://Bullet/CubeExposion.wav" id="2_ewoor"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qf5su"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ukqfb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q7vof"]
albedo_color = Color(0, 0.290196, 1, 1)
emission_enabled = true
emission_energy_multiplier = 9.27

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v224u"]
direction = Vector3(0, 0, 1)
spread = 180.0
initial_velocity_min = 3.0
initial_velocity_max = 5.0

[sub_resource type="BoxMesh" id="BoxMesh_4nici"]
size = Vector3(0.125, 0.125, 0.125)

[node name="Human2" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_8klur")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_qf5su")

[node name="Area3D2" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D2"]
transform = Transform3D(10.75, 0, 0, 0, 1, 0, 0, 0, 8.16596, 0, 0, 0)
shape = SubResource("CapsuleShape3D_ukqfb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ukqfb")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.142
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.074
autostart = true

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 1.89, 0, 0, 0, 2, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_q7vof")
emitting = false
amount = 36
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_v224u")
draw_pass_1 = SubResource("BoxMesh_4nici")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_ewoor")
max_distance = 12.8

[connection signal="body_entered" from="Area3D2" to="." method="_on_area_3d_2_body_entered"]
[connection signal="body_exited" from="Area3D2" to="." method="_on_area_3d_2_body_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
